<resources>
    <string name="app_name">MyArchiveMobile</string>
    <string name="album">Album</string>
    <string name="album_number">Number of Disks</string>
    <string name="album_type">Type</string>
    <string name="album_last_heard">Last Heard</string>
    <string name="book">Book</string>
    <string name="book_numberOfPages">Number of pages</string>
    <string name="book_type">Type</string>
    <string name="book_path">Path</string>
    <string name="book_edition">Edition</string>
    <string name="book_topics">Topics</string>
    <string name="book_last_read">Last Read</string>
    <string name="customFields">Custom Fields</string>
    <string name="customFields_type">Field-Type</string>
    <string-array name="customFields_type_values">
        <item>@string/customFields_type_values_text</item>
        <item>@string/customFields_type_values_number</item>
        <item>@string/customFields_type_values_date</item>
        <item>@string/customFields_type_values_selection</item>
    </string-array>
    <string name="customFields_type_values_text">Text-Field</string>
    <string name="customFields_type_values_number">Number-Field</string>
    <string name="customFields_type_values_date">Date-Field</string>
    <string name="customFields_type_values_selection">Selection</string>
    <string name="customFields_allowed">Allowed Values (Separated by ;)</string>
    <string name="api">Export/Import</string>
    <string name="api_type_description">Would you like to export or import data?</string>
    <string-array name="api_type">
        <item>Export</item>
        <item>Import</item>
    </string-array>
    <string name="api_format_description">Which format?</string>
    <string name="api_file_name">File-Name</string>
    <string name="api_file_name_default">export</string>
    <string name="api_webservice">Get Data from WebService</string>
    <string name="api_webservice_no_network_title">No Internet!</string>
    <string name="api_webservice_no_network_content">The completion by the Webservices does not work without active Internet-Connection. Continue?</string>
    <string name="api_webservice_no_network_yes">Yes</string>
    <string name="api_webservice_no_network_no">No</string>
    <string name="api_delete">Delete all previous Data</string>
    <string name="api_csv_column">Column in File</string>
    <string name="api_db_column">Column in Database</string>
    <string-array name="api_cells">
        <item>@string/sys_title</item>
        <item>@string/media_general_originalTitle</item>
        <item>@string/media_general_releaseDate</item>
        <item>@string/media_general_price</item>
        <item>@string/media_general_code</item>
        <item>@string/media_general_category</item>
        <item>@string/media_general_tags</item>
        <item>@string/media_persons</item>
        <item>@string/media_companies</item>
        <item>@string/media_rating_own</item>
        <item>@string/media_rating_web</item>
        <item>@string/sys_description</item>
        <item>@string/book_edition</item>
        <item>@string/book_numberOfPages</item>
        <item>@string/book_topics</item>
        <item>@string/movie_length</item>
        <item>@string/album_number</item>
        <item>@string/customFields</item>
    </string-array>
    <string name="api_list">Add to List</string>
    <string name="api_list_new">Create new List</string>
    <string name="api_task_import">Import File!</string>
    <string name="api_task_import_data">Get Data!</string>
    <string name="api_task_import_webservice">Finalize Data by Webservice!</string>
    <string name="api_task_import_content">Import Data from File to Database!</string>
    <string name="api_task_import_msg_success">Line %d successfully imported!</string>
    <string name="api_task_import_msg_not_success">Line %1$d not successfully imported: %2$s</string>
    <string name="api_task_import_msg_not_success_mandatory">Title is a mandatory field!</string>
    <string name="api_task_export">Export Data!</string>
    <string name="api_task_export_content">Export Data from Database to File!</string>
    <string name="filter_no_filter">No Filter</string>
    <string name="filter_temp">Temporary Settings</string>
    <string name="filter_list">List</string>
    <string name="add_media">Add Media</string>
    <string name="game">Game</string>
    <string name="game_length">Length</string>
    <string name="game_type">Type</string>
    <string name="game_last_played">Last Played</string>
    <string name="library">Library</string>
    <string name="library_numberOfDays">Number of Days</string>
    <string name="library_numberOfWeeks">Number of Weeks</string>
    <string name="library_deadline">Deadline</string>
    <string name="library_returnedAt">Returned at</string>
    <string name="library_lendOut">Lend Out</string>
    <string name="library_msg" formatted="false">%s lend out by %s has reached the deadline!</string>
    <string name="lists">Lists</string>
    <string name="lists_dialog_title">Select Media</string>
    <string name="lists_msg">List %s has reached the deadline!</string>
    <string name="log" translatable="false">Log</string>
    <string name="main_navigation_media">Media</string>
    <string name="main_navigation_media_music">Music</string>
    <string name="main_navigation_media_movies">Movies</string>
    <string name="main_navigation_media_books">Books</string>
    <string name="main_navigation_media_games">Games</string>
    <string name="media_companies">Companies</string>
    <string name="media_companies_foundation">Foundation-Date</string>
    <string name="media_cover">Cover</string>
    <string name="media_general">General</string>
    <string name="media_general_originalTitle">Original-Title</string>
    <string name="media_general_releaseDate">Release-Date</string>
    <string name="media_general_code">Code</string>
    <string name="media_general_price">Price</string>
    <string name="media_general_category">Category</string>
    <string name="media_general_tags">Tags</string>
    <string name="media_general_empty">Field is empty!</string>
    <string name="media_rating_web">Web-Rating</string>
    <string name="media_rating_own">Own Rating</string>
    <string name="media_rating_note">Comment</string>
    <string name="media_persons">Persons</string>
    <string name="media_persons_companies">Persons and Companies</string>
    <string name="media_persons_firstName">FirstName</string>
    <string name="media_persons_lastName">LastName</string>
    <string name="media_persons_birthDate">BirthDate</string>
    <string name="movie">Movie</string>
    <string name="movie_length">Length</string>
    <string name="movie_type">Type</string>
    <string name="movie_path">Path</string>
    <string name="movie_last_seen">Last Seen</string>
    <string name="scanner">Scanner</string>
    <string name="categories_and_tags">Categories and Tags</string>
    <string name="settings">Settings</string>
    <string name="settings_general">General</string>
    <string name="settings_general_summary">General Settings for the app!</string>
    <string name="settings_general_notifications">Notifications</string>
    <string name="settings_general_notifications_summary">Enable Notifications!</string>
    <string name="settings_general_debug">Debug-Mode</string>
    <string name="settings_general_debug_summary">Enable Debug-Mode</string>
    <string name="settings_general_media_count">Number of shown Media-Items</string>
    <string name="settings_general_media_count_summary">Set the Number of shown Media-Items</string>
    <string name="settings_general_media_count_default" translatable="false">100</string>
    <string name="settings_general_media_order">Order</string>
    <string name="settings_general_media_order_summary">Order Media by…</string>
    <string name="settings_general_media_order_default">Media-Type and Title</string>
    <string name="settings_general_media_order_creation">Creation-Date</string>
    <string-array name="settings_general_media_order_items">
        <item>ID</item>
        <item>@string/settings_general_media_order_default</item>
        <item>@string/sys_title</item>
        <item>@string/media_general_releaseDate</item>
        <item>@string/settings_general_media_order_creation</item>
    </string-array>
    <string name="settings_general_internet">Message for no Internet!</string>
    <string name="settings_general_internet_summary">Disable Message if no Internet-Connection!</string>
    <string name="settings_services">Webservices</string>
    <string name="settings_services_summary">Settings for The Web-Services!\nOnly change them if you know what you do!</string>
    <string name="settings_services_google_books">Google-Books-Key</string>
    <string name="settings_services_google_books_summary">Set Google-Books-Key!</string>
    <string name="settings_services_audio_db">Audio-DB-Key</string>
    <string name="settings_services_audio_db_summary">Set the Audio-DB-Key!</string>
    <string name="settings_services_movie_db">Movie-DB-Key</string>
    <string name="settings_services_movie_db_summary">Set the Movie-DB-Key!</string>
    <string name="settings_services_igdb">IGDB-Key</string>
    <string name="settings_services_igdb_summary">Set the IGDB-Key!</string>
    <string name="settings_services_ean_data">EANData-Key</string>
    <string name="settings_services_ean_data_summary">Set EANData-Key!</string>
    <string name="sync">Synchronisation</string>
    <string name="sync_no_bluetooth">No Bluetooth available!</string>
    <string name="sync_device_bonded">Bonded</string>
    <string name="sync_device_not_bonded">Not Bonded</string>
    <string name="sys_password" translatable="false">T9yYQsFHzr9DTNNGonIT</string>
    <string name="sys_add">Add</string>
    <string name="sys_edit">Edit</string>
    <string name="sys_cancel">Cancel</string>
    <string name="sys_save">Save</string>
    <string name="sys_title">Title</string>
    <string name="sys_description">Description</string>
    <string name="sys_date_format">yyyy-MM-dd</string>
    <string name="export_search">…</string>
    <string name="sys_search">Search</string>
    <string name="sys_empty" formatted="false"> (Empty)</string>
    <string name="sys_success" formatted="false">%s successfully!</string>
    <string name="sys_no_internet">No Internet-Connection!</string>
    <string name="sys_reload">Reload</string>
    <string name="sys_reload_summary">Reload data…</string>
    <string name="sys_next">Next</string>
    <string name="sys_previous">Previous</string>
    <string name="file_tree">Documents</string>
    <string name="file_tree_system">System</string>
    <string name="file_tree_gallery">Gallery</string>
    <string name="file_tree_data">Data</string>
    <string name="file_tree_embed">Embed</string>
    <string name="file_tree_node_add">Add Node</string>
    <string name="file_tree_file_add">Add File</string>
    <string name="file_tree_load">Load Data!</string>
    <string name="file_tree_load_db">Init Database (%s)…</string>
    <string name="file_tree_load_tree">Init File-Tree…</string>
    <string name="file_tree_load_files">Load Files…</string>
    <string name="file_tree_view">View</string>
    <string name="file_tree_context_copy">Copy</string>
    <string name="file_tree_context_move">Move</string>
    <string name="file_tree_context_paste">Paste</string>
    <string name="ad_mob_key" translatable="false">ca-app-pub-4983888966373182/6514496441</string>
    <string name="ad_mob_key_testing" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="no_internet_settings">Open Settings</string>
</resources>