<!--
  ~ This file is part of the MyArchiveMobile distribution (https://github.com/domjos1994/MyArchiveMobile).
  ~ Copyright (c) 2020 Dominic Joas.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, version 3.
  ~
  ~ This program is distributed in the hope that it will be useful, but
  ~ WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
  ~ General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program. If not, see <http://www.gnu.org/licenses/>.
  -->

<androidx.preference.PreferenceScreen 
	xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.preference.PreferenceCategory
        app:title="@string/settings_general"
        app:icon="@mipmap/ic_launcher_round">

        <androidx.preference.SwitchPreference
            app:key="swtNotifications"
            app:title="@string/settings_general_notifications"
            app:summary="@string/settings_general_notifications_summary"
            app:defaultValue="true"
            app:icon="@drawable/icon_arrow_right"/>

        <androidx.preference.SwitchPreference
            app:key="swtDebugMode"
            app:title="@string/settings_general_debug"
            app:summary="@string/settings_general_debug_summary"
            app:icon="@drawable/icon_arrow_right"/>
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        app:title="@string/settings_services"
        app:icon="@drawable/icon_cloud">

        <EditTextPreference
            android:contentDescription="@string/settings_services_google_books_summary"
            android:hint="@string/settings_services_google_books"
            app:dialogIcon="@drawable/icon_cloud"
            app:dialogMessage="@string/settings_services_google_books_summary"
            app:dialogTitle="@string/settings_services_google_books"
            app:icon="@drawable/icon_arrow_right"
            app:key="txtGoogleBooksKey"
            app:summary="@string/settings_services_google_books_summary"
            app:title="@string/settings_services_google_books" />

        <EditTextPreference
            app:key="txtMovieDBKey"
            app:title="@string/settings_services_movie_db"
            app:summary="@string/settings_services_movie_db_summary"
            app:dialogTitle="@string/settings_services_movie_db"
            app:dialogMessage="@string/settings_services_movie_db_summary"
            app:dialogIcon="@drawable/icon_cloud"
            app:icon="@drawable/icon_arrow_right"
			android:contentDescription="@string/settings_services_movie_db_summary"
			android:hint="@string/settings_services_movie_db"/>

        <EditTextPreference
            app:key="txtIGDBKey"
            app:title="@string/settings_services_igdb"
            app:summary="@string/settings_services_igdb_summary"
            app:dialogTitle="@string/settings_services_igdb"
            app:dialogMessage="@string/settings_services_igdb_summary"
            app:dialogIcon="@drawable/icon_cloud"
            app:icon="@drawable/icon_arrow_right"
			android:contentDescription="@string/settings_services_igdb_summary"
			android:hint="@string/settings_services_igdb"/>

        <EditTextPreference
            app:key="txtEANDataKey"
            app:title="@string/settings_services_ean_data"
            app:summary="@string/settings_services_ean_data_summary"
            app:dialogTitle="@string/settings_services_ean_data"
            app:dialogMessage="@string/settings_services_ean_data_summary"
            app:dialogIcon="@drawable/icon_cloud"
            app:icon="@drawable/icon_arrow_right"
			android:contentDescription="@string/settings_services_ean_data_summary"
			android:hint="@string/settings_services_ean_data"/>

    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>
