<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This file is part of the MyArchiveMobile distribution (https://github.com/domjos1994/MyArchiveMobile).
  ~ Copyright (c) 2020 Dominic Joas.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, version 3.
  ~
  ~ This program is distributed in the hope that it will be useful, but
  ~ WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
  ~ General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program. If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/navMainHome"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/app_name" />

    <item android:title="@string/main_navigation_media">
        <menu>
            <item
                android:id="@+id/navMainMediaMusic"
                android:icon="@drawable/ic_music_note_black_24dp"
                android:title="@string/main_navigation_media_music" />
            <item
                android:id="@+id/navMainMediaMovies"
                android:icon="@drawable/ic_local_movies_black_24dp"
                android:title="@string/main_navigation_media_movies" />
            <item
                android:id="@+id/navMainMediaBooks"
                android:icon="@drawable/ic_book_black_24dp"
                android:title="@string/main_navigation_media_books" />
            <item
                android:id="@+id/navMainMediaGames"
                android:icon="@drawable/ic_games_black_24dp"
                android:title="@string/main_navigation_media_games" />
        </menu>
    </item>

    <item android:title="@string/media_general" >
        <menu>
            <item
                android:id="@+id/navMainLibrary"
                android:icon="@drawable/ic_local_library_black_24dp"
                android:title="@string/library" />
            <item
                android:id="@+id/navMainLists"
                android:icon="@drawable/ic_format_list_bulleted_black_24dp"
                android:title="@string/lists" />
            <item
                android:id="@+id/navMainCustomFields"
                android:icon="@drawable/ic_text_fields_black_24dp"
                android:title="@string/customFields" />
            <item
                android:id="@+id/navMainExport"
                android:icon="@drawable/ic_import_export_black_24dp"
                android:title="@string/export" />
        </menu>
    </item>
</menu>
