<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This file is part of the MyArchiveMobile distribution (https://github.com/domjos1994/MyArchiveMobile).
  ~ Copyright (c) 2020 Dominic Joas.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, version 3.
  ~
  ~ This program is distributed in the hope that it will be useful, but
  ~ WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
  ~ General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program. If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menMainScanner"
        android:title="@string/scanner"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menMainPersons"
        android:title="@string/media_persons"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menMainCompanies"
        android:title="@string/media_companies"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menMainCategoriesAndTags"
        android:title="@string/categories_and_tags"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menMainSettings"
        android:title="@string/settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menMainLog"
        android:title="@string/log"
        app:showAsAction="never"/>
</menu>
