<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This file is part of the MyArchiveMobile distribution (https://github.com/domjos1994/MyArchiveMobile).
  ~ Copyright (c) 2020 Dominic Joas.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, version 3.
  ~
  ~ This program is distributed in the hope that it will be useful, but
  ~ WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
  ~ General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program. If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/cmdPrevious"
        android:title="@string/sys_previous"
        android:icon="@drawable/icon_previous"/>

    <item
        android:id="@+id/cmdAdd"
        android:title="@string/sys_add"
        android:icon="@drawable/icon_add"/>

    <item
        android:id="@+id/cmdEdit"
        android:title="@string/sys_edit"
        android:icon="@drawable/icon_edit"/>

    <item
        android:id="@+id/cmdNext"
        android:title="@string/sys_next"
        android:icon="@drawable/icon_next"/>
</menu>