<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This file is part of the MyArchiveMobile distribution (https://github.com/domjos1994/MyArchiveMobile).
  ~ Copyright (c) 2024 Dominic Joas.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, version 3.
  ~
  ~ This program is distributed in the hope that it will be useful, but
  ~ WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
  ~ General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program. If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/cmdAddNode"
        android:title="@string/file_tree_node_add"
        android:icon="@drawable/icon_tree"/>

    <item
        android:id="@+id/cmdAddFile"
        android:title="@string/file_tree_file_add"
        android:icon="@drawable/icon_file"/>

    <item
        android:id="@+id/cmdView"
        android:title="@string/file_tree_view"
        android:icon="@drawable/icon_view" />

    <item
        android:id="@+id/cmdReload"
        android:title="@string/sys_reload"
        android:icon="@drawable/icon_refresh" />
</menu>