<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This file is part of the MyArchiveMobile distribution (https://github.com/domjos1994/MyArchiveMobile).
  ~ Copyright (c) 2024 Dominic Joas.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, version 3.
  ~
  ~ This program is distributed in the hope that it will be useful, but
  ~ WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
  ~ General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program. If not, see <http://www.gnu.org/licenses/>.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/main_navigation_media_books">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">
        <EditText
            android:id="@+id/txtMediaBookNumberOfPages"
            android:hint="@string/book_numberOfPages"
            android:autofillHints="@string/book_numberOfPages"
            android:inputType="numberSigned"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:targetApi="o" />

        <Spinner
            android:id="@+id/spMediaBookType"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spinner_height"
            android:autofillHints="@string/book_type"
            android:hint="@string/book_type"
            tools:targetApi="o" />

        <TableRow>
            <EditText
                android:id="@+id/txtMediaBookPath"
                android:hint="@string/book_path"
                android:autofillHints="@string/book_path"
                android:inputType="text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:targetApi="o"
                android:layout_weight="9"/>
            <ImageButton
                android:id="@+id/cmdMediaBookPath"
                android:contentDescription="@string/sys_search"
                app:srcCompat="@drawable/icon_search"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/imageButton"/>
        </TableRow>

        <EditText
            android:id="@+id/txtMediaBookEdition"
            android:hint="@string/book_edition"
            android:autofillHints="@string/book_edition"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/txtMediaBookTopics"
            android:hint="@string/book_topics"
            android:autofillHints="@string/book_topics"
            android:inputType="textMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:targetApi="o" />

        <de.domjos.myarchivemobile.custom.CustomDatePickerField
            android:id="@+id/txtMediaBookLastRead"
            android:hint="@string/book_last_read"
            android:autofillHints="@string/book_last_read"
            app:showTime="false"
            app:dateFormat="@string/date_format"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:targetApi="o" />
    </TableLayout>
</ScrollView>