<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/txtMediaMovieLength"
            android:hint="@string/movie_length"
            android:autofillHints="@string/movie_length"
            android:inputType="numberDecimal|numberSigned"
            android:digits="0123456789.,"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:targetApi="o" />

        <Spinner
            android:id="@+id/spMediaMovieType"
            android:hint="@string/movie_type"
            android:autofillHints="@string/movie_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/txtMediaMoviePath"
            android:hint="@string/movie_path"
            android:autofillHints="@string/movie_path"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:targetApi="o" />
    </LinearLayout>
</ScrollView>